--- a/AtividadeII/src/componentes/cadastro.css
+++ b/AtividadeII/src/componentes/cadastro.css
@@ -6,38 +6,42 @@ html, body{
 
 .container{
     display: grid;
-    grid-template-columns: 3fr 5fr;
+    grid-template-columns: 50fr 50fr;
     grid-gap: 12px;
-    grid-column-gap: 20px;
+    grid-column-gap: 40px;
     margin: auto;
-    grid-template-rows: 10vh 80vh 10vh;
+    grid-template-rows: 10vh 0vh 10vh;
 }
 
-.botao{
-    width: 147.733px;
-    margin-left: 10px;
+
+
    
-}
 
-.botao2{
-    width: 147.733px;
-    margin-left: 370px;
-
-}
 .botao1{
     background-color: #440052;
-    box-shadow: 0px 1px 42px rgb(255, 255, 255);
+    box-shadow: 0px 1px 10px rgb(255, 255, 255);
     border-radius: 10px;
     border: none;
     display: flex;
 	flex-wrap: wrap;
     text-align: center;
     color: aliceblue;
-    padding: 8px 12px;
+    padding: 10px 10px;
     line-height: 1.5em;
     font-weight:    bolder;
+    width: 147.733px;
+    margin-left: 10px;
+    align-items: center;
     
     
+
+}
+
+.botao1:hover{
+    background-color: #FFFFFE;
+    color:#440052;
+    border-color: #440052;
+    transition: 1s;
 
 }
 
@@ -45,6 +49,7 @@ html, body{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    
 }
 
 
@@ -74,6 +79,11 @@ section{
     text-align: center;
 }
 
+.box:hover{
+    box-shadow: 0px 1px 42px   rgba(83, 1, 98, 0.952); 
+    transition: 1s;
+}
+
 .teste{
     margin-top: 30px;
 }
@@ -97,3 +107,21 @@ section{
         grid-column-end: 1;
     }
   }
+.nav-wrapper{
+    background: #440052;
+}
+
+
+.nav ul:hover{
+    background-color: #FFFFFE;
+}
+
+
+
+
+.right :hover{
+    background-color: #FFFFFE;
+    color: #440052;
+
+}
+
